# src/routes/booking.route.js
@@ -3,31 +3,31 @@ const app = express.Router();
 const controller = require('../controllers/booking.controller');
 
 app.get('/',
-    // #swagger.tags = ['Booking']
+    // #swagger.tags = ['Bookings']
     // #swagger.description = 'ดึงรายการจองทั้งหมด'
     controller.getBookings
 );
 
 app.get('/:id',
-    // #swagger.tags = ['Booking']
+    // #swagger.tags = ['Bookings']
     // #swagger.description = 'ดึงข้อมูลการจองตาม ID'
     controller.getBookingById
 );
 
 app.post('/',
-    // #swagger.tags = ['Booking']
+    // #swagger.tags = ['Bookings']
     // #swagger.description = 'สร้างรายการจองใหม่'
     controller.createBooking
 );
 
 app.put('/:id',
-    // #swagger.tags = ['Booking']
+    // #swagger.tags = ['Bookings']
     // #swagger.description = 'แก้ไขข้อมูลการจอง'
     controller.updateBooking
 );
 
 app.delete('/:id',
-    // #swagger.tags = ['Booking']
+    // #swagger.tags = ['Bookings']
     // #swagger.description = 'ลบข้อมูลการจอง'
     controller.deleteBooking
 );
